--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <meta property="og:title" content="2048 Stacko"/>
   <meta property="og:site_name" content="2048 Stacko"/>
-  <meta property="og:description" content="2048 with the awesomeness of Stacko! Careful: this game is extremely addictive!"/>
+  <meta property="og:description" content="Stacking your tiles and GET 2048! Careful: this game is extremely addictive!"/>
   <meta property="og:image" content="http://gabrielecirulli.github.io/2048/meta/og_image.png"/>
 </head>
 <!-- body starts here-->
