--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <span style="font-size: 12px; padding-left: 16px">
     Tip: Falling tile can be collapsed in left/right directions. Press Space to pause</span>
 
-    <a href="http://jeffryhartanto.github.io" class="twitter-share-button">Tweet</a>
+    <a href="http://jeffryhartanto.github.io/2048.Stacko/" class="twitter-share-button">Tweet</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 
@@ -126,7 +126,7 @@
     </p>
     <hr>
     <p>
-    Enhanced by <a href="https://github.com/jeffryhartanto" target="_blank">Jeffry Hartanto</a>. 2048 Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Enhanced by <a href="http://jeffryhartanto.github.io/2048.Stacko/" target="_blank">Jeffry Hartanto</a>. 2048 Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
   </div>
   <script type='text/javascript' > 
