--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     <span style="font-size: 12px; padding-left: 16px">
     Tip: Falling tile can be collapsed in left/right directions. Press Space to pause</span>
 
-    <a href="http://jeffryhartanto.github.io" class="twitter-share-button">Tweet</a>
+    <a href="http://jeffryhartanto.github.io/2048.Stacko/" class="twitter-share-button">Tweet</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 
-   <div class="fb-share-button" data-href="http://jeffryhartanto.github.io" data-type="button_count"></div>
+   <div class="fb-share-button" data-href="http://jeffryhartanto.github.io/2048.Stacko/" data-type="button_count"></div>
 
     <div class="game-container">
       <div class="game-message">
